# edge

./: .bazelrc  AUTHORS  MODULE.bazel  Makefile  Makefile.am  README  README.md  WORKSPACE  advanced_mode.cc  advanced_mode.h  autogen.sh  buffer.cc  buffer.h  char_buffer.cc  char_buffer.h  command.h  command_mode.cc  command_mode.h  configure.ac  cpp.y  diff_writer.py  direction.cc  direction.h  editable_string.cc  editable_string.h  editor.cc  editor.h  editor_cp.cc  editor_mode.h  file_link_mode.cc  file_link_mode.h  find_mode.cc  find_mode.h  foo.md  fuzz.md  help.md  help_command.cc  insert_mode.cc  insert_mode.h  lazy_string.cc  (+45 more)
.github/workflows/: codeql.yml
agent/: file-access-policy.json  file-access-regex.txt  prompt.txt  validate.sh
doc/: bazel-structure.md  external_completion.md
glog-0.3.3/: configure
glog-0.4.0/: Makefile.in  aclocal.m4  configure
glog-0.4.0/src/: config.h.in
rc/: completion_model.txt  external_completion_command
rc/editor_commands/: buffer_load.cc  buffer_output.cc  camelcase.cc  compiler  cpp  cpp-mode  cpp-mode.cc  css-mode.cc  diff-with-disk  ellipsis  emdash  english  filter-all  filter-includes  filter-start  flashcard.cc  fold-next-line  fold-next-line.cc  german  git.cc  guillemets  header  include  include.cc  indent  indent.cc  java  java-mode  java-mode.cc  javascript-mode.cc  prompt-context.cc  py-mode.cc  reflow  reflow.cc  shapes  shapes.cc  smart-caps  smart-quotes
rc/hooks/: buffer-first-enter.cc  buffer-reload.cc  buffer-save.cc  navigation-buffer-reload.cc  start.cc
src/: BUILD  README.md  advanced_mode.cc  args.cc  args.h  args_tests.cc  async_processor.cc  async_processor.h  audio.cc  audio.h  buffer.cc  buffer.h  buffer_contents.cc  buffer_contents.h  buffer_contents_util.cc  buffer_contents_util.h  buffer_contents_view_layout.cc  buffer_contents_view_layout.h  buffer_display_data.cc  buffer_display_data.h  buffer_filter.cc  buffer_filter.h  buffer_flags.cc  buffer_flags.h  buffer_metadata_output_producer.cc  buffer_metadata_output_producer.h  buffer_name.cc  buffer_name.h  buffer_output_producer.cc  buffer_output_producer.h  buffer_registry.cc  buffer_registry.h  buffer_state.cc  buffer_state.h  buffer_subtypes.cc  buffer_subtypes.h  buffer_syntax_parser.cc  buffer_syntax_parser.h  buffer_terminal.cc  buffer_terminal.h  (+365 more)
src/concurrent/: BUILD  bag.cc  bag.h  notification.cc  notification.h  operation.cc  operation.h  protected.h  protected_tests.cc  thread_pool.cc  thread_pool.h  version_property_receiver.cc  version_property_receiver.h  work_queue.cc  work_queue.h
src/futures/: BUILD  delete_notification.cc  delete_notification.h  futures.cc  futures.h  listenable_value.h  serializer.cc  serializer.h
src/infrastructure/: BUILD  audio.cc  audio.h  command_line.cc  command_line.h  dirname.cc  dirname.h  dirname_tests.cc  dirname_vm.cc  dirname_vm.h  execution.cc  execution.h  extended_char.cc  extended_char.h  extended_char_vm.cc  extended_char_vm.h  file_adapter.h  file_descriptor_reader.cc  file_descriptor_reader.h  file_system_driver.cc  file_system_driver.h  glob.cc  glob.h  glob_tests.cc  path_suffix_map.cc  path_suffix_map.h  regular_file_adapter.cc  regular_file_adapter.h  terminal_adapter.cc  terminal_adapter.h  terminal_input_parser.cc  terminal_input_parser.h  time.cc  time.h  time_human.cc  time_human.h  tracker.cc  tracker.h
src/language/: BUILD  cached_supplier.h  const_tree.cc  const_tree.h  const_tree_benchmarks.cc  const_tree_tests.cc  container.h  container_traits.h  containers.h  function_traits.h  gc.cc  gc.h  gc_concepts.h  gc_container.h  gc_expanders.h  gc_tests.cc  gc_tests.dm.cc  gc_util.cc  gc_util.h  gc_view.h  ghost_type.cc  ghost_type.h  ghost_type_class.h  ghost_type_test.cc  hash.cc  hash.h  hash_tests.cc  lazy_value.cc  lazy_value.h  numbers.cc  numbers.h  observers.cc  observers.h  observers_gc.h  once_only_function.h  overload.h  safe_types.h  value_or_error.cc  value_or_error.h  wstring.cc  (+1 more)
src/math/: BUILD  bigint.cc  bigint.h  checked_operation.cc  checked_operation.h  decaying_counter.cc  decaying_counter.h  graph_deterministic.h  graph_non_deterministic.h  naive_bayes.cc  naive_bayes.h  numbers.cc  numbers.h
src/parsers/: cpp.cc  cpp.h  css.cc  css.h  csv.cc  csv.h  diff.cc  diff.h  markdown.cc  markdown.h  py.cc  py.h  util.cc  util.h  util_test.cc
src/python/: mappings.py
src/test/: buffer_contents_test.cc  buffer_contents_test.h  line_test.cc  line_test.h  parser_fuzz.cc
src/tests/: BUILD  benchmarks.cc  benchmarks.h  benchmarks_main.cc  concurrent.cc  concurrent.h  concurrent_interfaces.cc  concurrent_interfaces.h  fuzz.cc  fuzz.h  fuzz_testable.cc  fuzz_testable.h  tests.cc  tests.h
src/transformation/: BUILD  bisect.cc  bisect.h  composite.cc  composite.h  cursors.cc  cursors.h  delete.cc  delete.h  expand.cc  expand.h  goto_position.cc  goto_position.h  input.h  insert.cc  insert.h  move.cc  move.h  noop.cc  noop.h  paste.cc  paste.h  reach_query.cc  reach_query.h  repetitions.cc  repetitions.h  result.h  set_position.cc  set_position.h  stack.cc  stack.h  switch_case.cc  switch_case.h  tree_navigate.cc  tree_navigate.h  type.cc  type.h  variant.h  visual_overlay.cc  visual_overlay.h  (+2 more)
src/vm/: BUILD  append_expression.cc  append_expression.h  assign_expression.cc  assign_expression.h  binary_operator.cc  binary_operator.h  callbacks.cc  callbacks.h  callbacks_gc.h  class_expression.cc  class_expression.h  compilation.cc  compilation.h  constant_expression.cc  constant_expression.h  container.h  cpp.y  default_environment.cc  default_environment.h  delegating_expression.cc  delegating_expression.h  environment.cc  environment.h  escape.cc  escape.h  expression.cc  expression.h  expression_equality.cc  expression_equality.h  file_system.cc  file_system.h  filter_similar_names.cc  filter_similar_names.h  function_call.cc  function_call.h  fuzz.cc  if_expression.cc  if_expression.h  lambda.cc  (+32 more)
vm/: cpp.y  string.cc  string.h  vm.cc  vm.h
vm/internal/: append_expression.cc  append_expression.h  assign_expression.cc  assign_expression.h  binary_operator.cc  (+20 more)
(+166 files in other folders)
